--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 				<ul class="nav">
 					<li class="active">
-						<%= link_to "All Statuses", statuses_path %>
+						<%= link_to "Feed", feed_path %>
 					</li>
 				</ul>
 				<ul class="nav pull-right">
@@ -24,14 +24,14 @@
 							<%= link_to current_user.full_name, edit_user_registration_path %>
 						</li>
 						<li>
-							<%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+							<%= link_to "Log Out", logout_path %>
 						</li>
 					<% else %>
 						<li>
-							<%= link_to "Signup", new_user_registration_path %>
+							<%= link_to "Register", register_path %>
 						</li>
 						<li>
-							<%= link_to "Signin", new_user_session_path %>
+							<%= link_to "Login", login_path %>
 						</li>
 					<% end %>
 				</ul>
